--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,8 @@
 @import './base.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#app {
+  @apply flex flex-col min-h-screen;
+}
