Implement certificate section

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,7 +9,7 @@
 /* global classes */
 
 .bg-default {
-  background-color: var(--color-dim);
+  background-color: var(--color-cont-dim);
 }
 
 .bg-white {
