install and use font shabnam

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 @import './colors.css';
+@import './fonts/index.css';
 
 @tailwind base;
 @tailwind components;
@@ -18,6 +19,10 @@
 
 
 /* global elements styles */
+
+body {
+  font-family: 'Shabnam', sans-serif;
+}
 
 #app {
   @apply flex flex-col min-h-screen;
