--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,10 +34,14 @@ span {
 }
 
 h1 {
-  @apply font-black text-6xl;
+  @apply font-black text-4xl md:text-5xl lg:text-6xl;
   font-weight: bold;
 }
 
 h2 {
-  @apply font-black text-2xl;
+  @apply font-black text-2xl md:text-3xl lg:text-4xl;
 }
+
+/*h3 {*/
+/*  @apply font-black text-sm md:text-base lg:text-lg;*/
+/*}*/
