--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -42,6 +42,6 @@ h2 {
   @apply font-black text-2xl md:text-3xl lg:text-4xl;
 }
 
-/*h3 {*/
-/*  @apply font-black text-sm md:text-base lg:text-lg;*/
-/*}*/
+h3 {
+  @apply font-black text-sm md:text-base lg:text-lg;
+}
