--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,7 @@
 /* global elements styles */
 
 body {
-  font-family: 'Shabnam', sans-serif;
+  font-family: 'Yekan', sans-serif;
   font-size: 16px;
 }
 
